# Oldicecam

./: .gitignore  AGENTS.md  README.md  gradle.properties  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
clone/: CMakeLists.txt
clone/include/: FrameInjectQueue.h  HookSymbols.h  MediaContext.h  VcCloneLoader.h
clone/native/: FrameInjectQueue.cpp  libvc_clone.cpp  libvc_inject.cpp  media_pipeline.cpp  vc_clone_loader.cpp
decompiled/: INDEX.md
docs/: APK_FULL_REVERSE_ENGINEERING.md  APP_V26.md  APP_V27_RE_UNIFIED.md  BINDER_TX_RUNTIME_ANALYSIS.md  CLONE_ROADMAP.md  MAX_RECONSTRUCTION_REPORT.md  NATIVE_BACKEND_RECON_V19.md  NATIVE_FINAL_DECOMPILE.md  NATIVE_FULL_DECOMPILE_REPORT.md  NATIVE_REVERSE_MAX.md  RE_CONSOLIDATED_REPORT.md  RE_FINAL_REPORT.md  RE_NEXT_STEPS.md  RUNTIME_PROTOCOL_VERIFICATION.md  SOURCE_RECONSTRUCTION_REPORT.md  TERMUX_RUNTIME_COLLECTION.md  V10_STABLE_SERVICE_AND_MEDIA_SWITCHING.md  V11_BINDER_AND_MEDIA_SWITCH_FIX.md  V12_BLACK_SCREEN_RECOVERY.md  V15_ICECAM_CORE_REBUILD.md  V17_QUEUED_TRANSFORM_MEDIA_SLOTS.md  V18_RELIABLE_APPLY_QUEUE.md  V20_DIAGNOSTIC_SAFE_TRANSFORM.md  V21_STABLE_CANVAS_AUTO_APPLY.md  V23_NEON_CONTROL_PANEL.md  V25_RUNTIME_ARCHITECTURE.md  V4_IMPLEMENTATION_NOTES.md  V5_FIXES.md  V7_FLOATING_CONTROL.md  libvc_hook_handlers.c  source_recovery_report.html
docs/archive/iterations/: README.md  V13_BAKED_IMAGE_TRANSFORM.md  V14_CAMERA_RESTORE_STATUS.md  V16_STABILITY_AND_UI_CLEANUP.md  V19_STABLE_BACKEND_QUEUE_AND_GPU_PLAN.md  V22_UNIFIED_FLOATING_CONTROL_PLANE.md  V6_DEEP_RECONSTRUCTION.md  V8_TX24_TRANSFORM_RECONSTRUCTION.md  V9_REPORT_REFINED_RECONSTRUCTION.md
docs/native_analysis/: NATIVE_DEEP_ANALYSIS.md  native_deep_report.json
docs/runtime/: libvc_hook_symbols_device2.txt  service_list_device2.txt
docs/runtime/device2_capture/: README.md  README.txt  vcplax_cmdline.txt  vcplax_fd.txt  vcplax_maps.txt  vcplax_pid.txt  vcplax_status.txt
re-workspace/: README.md  decompiled  libs
reconstructed/: README.md
reconstructed/native-src/libvc/: libvc_hooks.decompiled.c
reconstructed/native-src/vcplax/: vcplax_daemon.decompiled.c
reconstructed/original-apk/: README.md
reconstructed/resources/: AndroidManifest.xml  apktool.yml
retool/: build.gradle
tools/: decode_libvc_xor.py  native_deep_analyze.py  native_xref_scan.py  parse_binder_sniff.py  re-analyze.sh  requirements-re.txt  setup-re-env.sh
tools/ghidra/: BookmarkIcecam.java  DecompileAll.java  DecompileAt.java  DecompileList.java  DumpMemoryAndResolve.java  FindOnTransact.java  ResolveAddress.java  analyze_native.sh  export_all.sh  export_batch.sh  export_decomp.sh
tools/r2/: analyze_native.sh  deep_vcplax.sh
tools/termux/: README.md  collect_runtime.sh  frida_attach_app.sh  frida_attach_vcplax.sh  frida_hook_libvc.js  frida_spawn_vcplax.sh  setup_frida.sh
vcamera/: README.md  build.gradle
vcamera/src/main/cpp/: CMakeLists.txt
(+124 files in other folders)
